--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -25,9 +25,9 @@ jobs:
         run: |
           $CommitMessage = git log --format=%B -n 1 HEAD
           if ( $CommitMessage -match '^doc:.*$') {
-            Add-Content -Value "docRelease=false" -Path $Env:GITHUB_ENV -Encoding utf8
+            Add-Content -Value "docRelease=false" -Path $Env:GITHUB_OUTPUT -Encoding utf8
           } else {
-            Add-Content -Value "docRelease=true" -Path $Env:GITHUB_ENV -Encoding utf8
+            Add-Content -Value "docRelease=true" -Path $Env:GITHUB_OUTPUT -Encoding utf8
           }
           echo $Env:GITHUB_ENV
         shell: pwsh
