--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -12,7 +12,8 @@ jobs:
     name: Release new version
     # Outputs the value of the check if doc release, the next job will not run if this fails
     outputs:
-      docRelease: ${{ steps.docRelease.outputs.docRelease}}
+      releaseType: ${{ steps.release.outputs.releaseType}}
+
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -21,18 +22,25 @@ jobs:
 
       # Checks what kind of release this is based on the commit message, doc changes does not trigger a new release
       - name: Check release type
-        id: docRelease
+        id: release
         run: |
           $CommitMessage = git log --format=%B -n 1 HEAD
           if ( $CommitMessage -match '^doc:.*$') {
-            Add-Content -Value "docRelease=false" -Path $Env:GITHUB_OUTPUT -Encoding utf8
+            Add-Content -Value "releaseType=doc" -Path $Env:GITHUB_OUTPUT -Encoding utf8
+          } else if ( $CommitMessage -match '^fix:(\s|\S)*$' ) {
+            Add-Content -Value "releaseType=fix" -Path $Env:GITHUB_OUTPUT -Encoding utf8
+          } else if ( $CommitMessage -match '^feat:(\s|\S)*$' ) {
+            Add-Content -Value "releaseType=feat" -Path $Env:GITHUB_OUTPUT -Encoding utf8
+          } else if ( $CommitMessage -match '^feat!:(\s|\S)*$' ) {
+            Add-Content -Value "releaseType=breaking" -Path $Env:GITHUB_OUTPUT -Encoding utf8
           } else {
-            Add-Content -Value "docRelease=true" -Path $Env:GITHUB_OUTPUT -Encoding utf8
+            Write-Output "::error title=Naming-Convention-Error::The commit message did not follow the agreed apon naming convention"
+            exit 1
           }
         shell: pwsh
 
       - name: Create release
-        if: steps.docRelease.outputs.docRelease == 'true'
+        if: steps.release.outputs.releaseType != 'doc'
         run: gh release create --fail-no-commits --generate-notes --latest
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -40,7 +48,7 @@ jobs:
     name: Push new release to Azure CDN
     # Does not run if the release is a doc release
     needs: [release]
-    if: needs.release.outputs.docRelease == 'true'
+    if: needs.release.outputs.releaseType != 'doc'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
