--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./workflows/scripts
+        working-directory: workflows/scripts
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
