doc: Github Actions test 26

--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -28,6 +28,8 @@ jobs:
         shell: pwsh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RepositoryURI: ${{ github.repository }}
+          RepositoryHost: ${{ github.server_url }}
 
       - name: Create release
         if: steps.release.outputs.releaseType != 'doc'
