--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -13,7 +13,7 @@ jobs:
     # Outputs the value of the check if doc release, the next job will not run if this fails
     outputs:
       releaseType: ${{ steps.release.outputs.releaseType}}
-
+      newVersionNumber: ${{ steps.newVersionNumber.outputs.newVersionNumber}}
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -32,9 +32,10 @@ jobs:
           RepositoryHost: ${{ github.server_url }}
 
       #Does not run if the merge was a doc change
-      - name: Create release
+      - name: Determine new version number
+        id: newVersionNumber
         if: steps.release.outputs.releaseType != 'doc'
-        run: .github/workflows/scripts/release-and-publish/createTag.ps1
+        run: .github/workflows/scripts/release-and-publish/findNewVersion.ps1
         shell: pwsh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -43,15 +44,26 @@ jobs:
           ReleaseType: ${{ steps.release.outputs.releaseType }}
 
       #Does not run if the merge was a doc change
+      - name: Create new tag
+        if: steps.release.outputs.releaseType != 'doc'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git tag -a "${{ steps.newVersionNumber.outputs.newVersionNumber}}" -m "Release v${{ steps.newVersionNumber.outputs.newVersionNumber}}"
+          git push origin
+
+      #Does not run if the merge was a doc change
       - name: Create release
         if: steps.release.outputs.releaseType != 'doc'
-        run: .github/workflows/scripts/release-and-publish/createRelease.ps1
-        shell: pwsh
+        uses: actions/create-release@v1
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RepositoryURI: ${{ github.repository }}
-          RepositoryHost: ${{ github.server_url }}
-          ReleaseType: ${{ steps.release.outputs.releaseType }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.newVersionNumber.outputs.newVersionNumber}}
+          release_name: 'v${{ steps.newVersionNumber.outputs.newVersionNumber}}'
+          body: |
+            # New release version: ${{ steps.newVersionNumber.outputs.newVersionNumber}}
+            *This is an automated release triggered by the merge of a pull request in the repository: ${{ github.repositoryUrl }}. Please see the Pull request that caused this release for further details.*
   cdn-push:
     name: Push new release to Azure CDN
     # Does not run if the release is a doc release
