feat: Feat-Test nr 2

--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -68,7 +68,7 @@ jobs:
   cdn-push:
     name: Push new release to Azure CDN
     # Does not run if the release is a doc release
-    needs: [release, newVersionNumber]
+    needs: [release]
     if: needs.release.outputs.releaseType != 'doc'
     runs-on: ubuntu-latest
     steps:
