--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -55,15 +55,16 @@ jobs:
       #Does not run if the merge was a doc change
       - name: Create release
         if: steps.release.outputs.releaseType != 'doc'
-        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.newVersionNumber.outputs.newVersionNumber}}
-          release_name: 'v${{ steps.newVersionNumber.outputs.newVersionNumber}}'
-          body: |
-            # New release version: ${{ steps.newVersionNumber.outputs.newVersionNumber}}
-            *This is an automated release triggered by the merge of a pull request in the repository: ${{ github.repositoryUrl }}. Please see the Pull request that caused this release for further details.*
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create \
+          --repo ${{ github.repositoryUrl }} \
+          --title 'v${{ steps.newVersionNumber.outputs.newVersionNumber}}' \
+          --generate-notes \
+          --notes "# New release version: ${{ steps.newVersionNumber.outputs.newVersionNumber}}
+            *This is an automated release triggered by the merge of a pull request in the repository: ${{ github.repositoryUrl }}. Please see the Pull request that caused this release for further details.*"
+          /
 
   cdn-push:
     name: Push new release to Azure CDN
