feat!: Breaking-Test nr 2

--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -59,6 +59,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create \
+          --tag ${{ steps.newVersionNumber.outputs.newVersionNumber}} \
           --repo ${{ github.repositoryUrl }} \
           --title 'v${{ steps.newVersionNumber.outputs.newVersionNumber}}' \
           --generate-notes \
