feat!: Breaking-Test nr 3

--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -58,8 +58,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create \
-          --tag ${{ steps.newVersionNumber.outputs.newVersionNumber}} \
+          gh release create ${{ steps.newVersionNumber.outputs.newVersionNumber}} \
           --repo ${{ github.repositoryUrl }} \
           --title 'v${{ steps.newVersionNumber.outputs.newVersionNumber}}' \
           --generate-notes \
