--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -78,7 +78,9 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_SECRET }}
-          service-principal-clientId: ${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_CLIENTID }}
+          client-id: ${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_CLIENTID }}
+          tenant-id: ${{ secrets.AZURE_CDN_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_CDN_SUBSCRIPTION_ID }}
 
       - name: Upload release to CDN
         uses: azure/cli@v2
