--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Azure login
         uses: azure/login@v2
         with:
-          creds: '{ "clientSecret": ${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_SECRET }}, "subscriptionId": ${{ secrets.AZURE_CDN_SUBSCRIPTION_ID }}, "tenantId": ${{ secrets.AZURE_CDN_TENANT_ID }}, "clientId": ${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_CLIENTID }} }'
+          creds: '{ "clientSecret": "${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_SECRET }}", "subscriptionId": "${{ secrets.AZURE_CDN_SUBSCRIPTION_ID }}", "tenantId": "${{ secrets.AZURE_CDN_TENANT_ID }}", "clientId": "${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_CLIENTID }}"}'
 
       - name: Upload release to CDN
         uses: azure/cli@v2
