--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -79,6 +79,10 @@ jobs:
         with:
           creds: '{ "clientSecret": "${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_SECRET }}", "subscriptionId": "${{ secrets.AZURE_CDN_SUBSCRIPTION_ID }}", "tenantId": "${{ secrets.AZURE_CDN_TENANT_ID }}", "clientId": "${{ secrets.AZURE_CDN_SERVICE_PRINCIPAL_CLIENTID }}"}'
 
+      - name: Prepare files for upload
+        run: .github/workflows/scripts/release-and-publish/uploadAfpantFilesToAzure.ps1
+        shell: pwsh
+
       - name: Upload release to CDN
         uses: azure/cli@v2
         env:
@@ -87,14 +91,6 @@ jobs:
           newVersionNumber: ${{ needs.release.outputs.newVersionNumber }}
         with:
           inlineScript: |
-            New-Item -Path "./" -Name "actions-tmp" -ItemType "Directory"
-            New-Item -Path "./actions-tmp" -Name "xslt" -ItemType "Directory"
-            New-Item -Path "./actions-tmp" -Name "xsd" -ItemType "Directory"
-            New-Item -Path "./actions-tmp" -Name "xml" -ItemType "Directory"
-            Get-ChildItem -Path 'spesifikasjoner/afpant/' -Recurse -Include *.xslt | ForEach-Object -Process { Copy-Item $_.VersionInfo.FileName ./actions-tmp/xslt/ }
-            Get-ChildItem -Path 'spesifikasjoner/afpant/' -Recurse -Include *.xsd | ForEach-Object -Process { Copy-Item $_.VersionInfo.FileName ./actions-tmp/xsd }
-            Get-ChildItem -Path 'spesifikasjoner/afpant/' -Recurse -Include *.xml | ForEach-Object -Process { Copy-Item $_.VersionInfo.FileName ./actions-tmp/xml }
-            Get-ChildItem -Path 'actions-tmp' -Recurse | ForEachObject -Process { Write-Output "::notice::Uploading file: $_.Name" }
             az storage blob upload-batch --destination ${{ secrets.AZURE_STORAGE_BLOB_CONTAINER_NAME }} --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }} --destination-path "dsve/v/${{ needs.release.outputs.newVersionNumber }}/" --source "./actions-tmp/"
 
       - name: Purge CDN cache
