--- a/.github/workflows/release-anc-publish.yaml
+++ b/.github/workflows/release-anc-publish.yaml
@@ -91,10 +91,12 @@ jobs:
         uses: azure/CLI@v2
         env:
           azure-subscription-id: ${{ secrets.AZURE_CDN_SUBSCRIPTION_ID }}
+          azure-storage-account-name: ${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }}
+          azure-blob-container-name: ${{ secrets.AZURE_STORAGE_BLOB_CONTAINER_NAME }}
           newVersionNumber: ${{ needs.release.outputs.newVersionNumber }}
         with:
           inlineScript: |
-            az storage blob upload-batch --auth-mode login -d '$web' --account-name "dsopdsvecdn" --destination-path "dsve/v/${{ needs.release.outputs.newVersionNumber }}/" --source "./actions-tmp/"
+            az storage blob upload-batch -d "$Env:azure-storage-account-name" --account-name "$Env:azure-storage-account-name" --destination-path "dsve/v/$Env:newVersionNumber/" --source "./actions-tmp/"
 
       - name: Purge CDN cache
         uses: azure/cli@v2
