--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -12,6 +12,7 @@ jobs:
 
       - name: Check for correct naming scheme
         id: checkNaming
+        shell: pwsh
         run: |
           $CommitMessage = git log --format=%B -n 1 HEAD
           if ( $CommitMessage -match '^(fix|feat|feat!|doc):(\s|\S)*$') {
