--- a/.github/workflows/sanatize-commit.yaml
+++ b/.github/workflows/sanatize-commit.yaml
@@ -1,7 +1,7 @@
 name: sanatize-commnit
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, edited]
 jobs:
   check-commit:
     name: Check commit message
